--- a/eQTL_plotting.ipynb
+++ b/eQTL_plotting.ipynb
@@ -227,8 +227,7 @@
     "\n",
     "# Save the plot to Google Drive\n",
     "svg_file_path = 'RMIP_and_eQTL_hits_with_specific_genes.svg'\n",
-    "plt.savefig(svg_file_path, format='svg', dpi=300)\n",
-    "plt.show()"
+    "plt.savefig(svg_file_path, format='svg', dpi=300)"
    ]
   }
  ],
